# openpane

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release.yml
docs/: index.html
scripts/: grid-linux.js  grid-macos.js  grid.ps1  install.ps1  install.sh  search_notes.py
src/: main.rs
