[package]
name = "openpane"
version = "0.2.0"
edition = "2024"
description = "Open exact terminal grids across one display or every display."
license = "MIT"
repository = "https://github.com/made-by-chris/openpane"
homepage = "https://made-by-chris.github.io/openpane/"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }
